--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
-#navbar{
+body{
     font-family: "Source Sans 3", sans-serif;
+}
+#navbar{
     display: flex;
     align-items: center;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
@@ -61,16 +63,11 @@ a{
 .blink_me {
     animation: blinker 1s linear infinite;
   }
-  
   @keyframes blinker {
     50% {
       opacity: 0;
     }
   }
-/* @keyframes mymove {
-    5%   {left: 0px; background: red; width: 40px;}
-    5% {right: 0px; background: rgb(255, 0, 0); width: 40px;}
-  } */
 #navbox2{
     display: flex;
     align-items: center;
@@ -81,8 +78,242 @@ a{
     width: fit-content;
     padding: 10px;
 }
+#second-nav{
+    display: flex;
+    justify-content: space-between;
+    box-shadow: rgba(224, 221, 221, 0.02) 0px 1px 3px 0px, rgba(91, 92, 93, 0.15) 0px 0px 0px 1px;
+}
+.left{
+    display: flex;
+    margin-left: 40px;
+}
+.right{
+    display: flex;
+    margin-right: 20px;
+    margin-left: 30px;
+}
+#location{
+   
+   margin-top: 12px;
+    height: 35px;
+    width: 150px;
+    box-shadow: rgba(224, 221, 221, 0.02) 0px 1px 3px 0px, rgba(91, 92, 93, 0.15) 0px 0px 0px 1px;
+   border-radius: 2px;
+}
+select{
+    border: none;
+    background-color: rgb(241,244,246);
+}
 
-@media screen and (max-width: 768px) and (min-width:425px ) {
+.search-div{
+    width: 500px;
+    height: 35px;
+    margin: 15px;
+    border-radius: 5px;
+    background-color: rgb(241,244,246);
+    box-shadow: rgba(224, 221, 221, 0.02) 0px 1px 3px 0px, rgba(91, 92, 93, 0.15) 0px 0px 0px 1px;
+}
+input{
+    width: 396px;
+    border: none;
+    padding: 5px;
+    background-color: rgb(241,244,246);
+
+}
+.searchbtn{
+    border: none;
+    height: 30px;
+    color: gray;
+    position: relative;
+    right: -40px;
+    top: 2px;
+    
+}
+.orderbtn{
+    border: none;
+    background-color:rgb(252, 0, 0);
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    height: 40px;
+    width: 150px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 17px;
+    margin: 8px;
+}
+/* dropdown product content */
+#dropdownitems{
+    height: 50px;
+}
+.product{
+    float: left;
+    /* overflow: hidden; */
+  }
+  .product .dropdown{
+    font-size: 14px;  
+    border: none;
+    outline: none;
+    color: black;
+    padding: 10px 20px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  .product:hover .dropdown {
+    color: red;
+  }
+  .dropdown-content {
+    display: none;
+    background-color: white;
+    font-size: 12px;
+    position: absolute;
+    color: #e60b0b;
+    min-width: fit-content;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+    z-index: 1;
+  }
+  .dropdown-content a{
+    float: none;
+    color: rgb(0, 0, 0);
+    padding: 5px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .dropdown-content a:hover {
+    color: #fd0a0a;
+  }
+  .product:hover .dropdown-content {
+    display: block;
+  }
+  h4{
+    margin: 0px;
+    font-weight: 800;
+  }
+/* slider images */
+#frame {
+    width: 960px;
+    max-width: 100%;
+    display: flex;
+}
+
+#frame input[type=radio] {
+    display: none;
+}
+
+#frame label {
+    cursor: pointer;
+    text-decoration: none;
+}
+#overflow {
+    width: 100%;
+    overflow: hidden;
+}
+
+#frame1:checked~#slides .inner {
+    margin-left: 0;
+}
+#frame2:checked~#slides .inner {
+    margin-left: -100%;
+}
+
+#frame3:checked~#slides .inner {
+    margin-left: -200%;
+}
+
+#frame4:checked~#slides .inner {
+    margin-left: -100%;
+}
+
+#slides .inner {
+    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+    width: 400%;
+    background-color: black;
+    line-height: 0;
+    height: 200px;
+}
+
+#slides .frame {
+    width: 25%;
+    
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#controls {
+    margin: -180px 0 0 0;
+    width: 100%;
+    height: 50px;
+    z-index: 3;
+    /* position: relative; */
+}
+
+#controls label {
+    transition: opacity 0.2s ease-out;
+    display: none;
+    width: 50px;
+    height: 50px;
+    opacity: .4;
+}
+
+#controls label:hover {
+    opacity: 1;
+}
+
+#frame1:checked~#controls label:nth-child(2),
+#frame2:checked~#controls label:nth-child(3),
+#frame3:checked~#controls label:nth-child(4),
+#frame4:checked~#controls label:nth-child(1) {
+    float: right;
+    margin: 0 -50px 0 0;
+    display: block;
+}
+
+#frame1:checked~#controls label:nth-last-child(2),
+#frame2:checked~#controls label:nth-last-child(3),
+#frame3:checked~#controls label:nth-last-child(4),
+#frame4:checked~#controls label:nth-last-child(1) {
+     float: left;
+    margin: 0 0 0 -50px;
+    display: block;
+}
+
+#bullets {
+    margin: 110px 0 0;
+    text-align: center;
+}
+
+#bullets label {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    background: #000000;
+    margin: 0 10px;
+}
+
+#frame1:checked~#bullets label:nth-child(1),
+#frame2:checked~#bullets label:nth-child(2),
+#frame3:checked~#bullets label:nth-child(3),
+#frame4:checked~#bullets label:nth-child(4) {
+    background: #000000;
+}
+#slides {
+    max-width: calc(100% - 0px);
+    margin: 0 ;
+}
+.slideimg{
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+#img1{
+    height: 200px ;
+    width: 510px;
+}
+
+
+@media screen and (max-width: 768px) and (min-width:426px ) {
     #navbar{
         
         display: flex;
@@ -110,8 +341,51 @@ a{
        font-size: 12px;
         margin-left: 15px;
     }
+    #second-nav{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-between;
+        box-shadow: rgba(224, 221, 221, 0.02) 0px 1px 3px 0px, rgba(91, 92, 93, 0.15) 0px 0px 0px 1px;
+    }
+    .left{
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 30px;
+    }
+    .right{
+        display: flex;
+        flex-wrap: wrap;
+        margin-right: 20px;
+    }
+    .search-div{
+        width: 500px;
+        margin: 10px 0px 0px 0px;
+        
+    }
+    .searchbtn{
+        height: 30px;
+        color: gray;
+        position: relative;
+        right: -40px;
+        top: 2px;
+        
+    }
+    #dropdownitems{
+        height: 190px;
+    }
+    .slideimg{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #img1{
+        height: 200px ;
+        width: 100%;
+    }
+   
+    
 }
-@media screen and (max-width: 424px) and (min-width:200px ) {
+@media screen and (max-width: 425px) and (min-width:200px ) {
     #navbar{
         display: flex;
         flex-wrap: wrap;
@@ -124,16 +398,69 @@ a{
         font-size: 9px;
         color: black;
         font-family: sans-serif;
-    
+
     }
+
     #NAVBOX{
         display: flex;
         flex-wrap: wrap; 
+        width: 100%;
     }
     #navbox2{
         display: flex;
         align-items: center;
        font-size: 10px;
         margin-left: 10px;
+       
     }
+    #second-nav{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-between;
+        box-shadow: rgba(224, 221, 221, 0.02) 0px 1px 3px 0px, rgba(91, 92, 93, 0.15) 0px 0px 0px 1px;
+    }
+    .left{
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 0px;
+    }
+    .right{
+        display: flex;
+        flex-wrap: wrap;
+        margin-right: 0px;
+    }
+    .search-div{
+        width: 200px;
+        margin: 1px;
+    }
+    .searchbtn{
+        width: 10px;
+        position: relative;
+        right: -20px;
+        top: 5px;
+    }
+    input{
+        width: 200px;
+        border: none;
+        padding: 8px;
+    }
+    #dropdownitems{
+        height: 200px;
+    }
+    .slideimg{
+        display: block;
+        /* display: flex;
+        flex-wrap: wrap; */
+    }
+    #img1{
+        height: 200px ;
+        width: 100%;
+    }
+    #frame {
+        width: 960px;
+        max-width: 100%;
+        display: block;
+    }
+   
 }
